// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Resizeable /> should render properly with the cursor left 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: col-resize;
  width: 4px;
  margin-left: -2px;
  margin-right: -2px;
  z-index: 10;
}

.emotion-1 {
  width: 400px;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "overflow": "hidden",
    }
  }
>
  <div
    aria-label="Resize to the left"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-1"
  >
    Yoga div
  </div>
</div>
`;

exports[`<Resizeable /> should render properly with the cursor right 1`] = `
.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: col-resize;
  width: 4px;
  margin-left: -2px;
  margin-right: -2px;
  z-index: 10;
}

.emotion-0 {
  width: 400px;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "overflow": "hidden",
    }
  }
>
  <div
    className="emotion-0"
  >
    Yoga div
  </div>
  <div
    aria-label="Resize to the right"
    className="emotion-1"
    onMouseDown={[Function]}
  />
</div>
`;

exports[`<Resizeable /> should render properly with the cursor top 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-1 {
  height: 400px;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
      "overflow": "hidden",
    }
  }
>
  <div
    aria-label="Resize to the top"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-1"
  >
    Yoga div
  </div>
</div>
`;
